- Fix for copying material from gretl using Ctrl-C on Windows
- Update Windows version to gtk 2.4.3 runtime
- add "restrict" command for general Wald test (not yet trans-
  lated, too new)
- add "ok(x)" as a short synonym for "!missing(x)" in the 
  context of the genr command
- add a new "smpl" option: "smpl 100 --random" selects 100
  observations from the dataset at random

6/13/2004 version 1.2.7
- add Italian helpfiles (thanks to Cristian Rigamonti)
- update Spanish helpfiles 
- add start-up option "-e" or "--english" to force use of
  English strings when LANG would indicate translation
  (also recognize environment variable GRETL_LANG: if this
  is "english" or "C", run in English)
- allow for missing values (silent) in audio graphs
- add a few keystrokes to the main gretl window:
  'a': audio (read list of variables)
  'x': stop audio
  'e': edit attributes of current variable
  't': plot current variable
- make start-up tests for tramo and x12a less verbose
- fix bug in deletion of scalar variables from the dataset
- fix bug in built-in spreadsheet: clicking in a blank
  column could crash gretl 
- fix broken behavior of built-in spreadsheet for gtk
  2.0.X versions
- fix various bug and typos in documentation
- build tweaks for OS X
- make available a pre-built disk image for OS X

5/25/2004 version 1.2.6
- add Hodrick-Prescott filter, as "hpfilt" function in the
  genr command
- revamp xls importer: should now be substantially more
  robust
- begin adding experimental audio graph feature for visually
  impaired users
- improve handling of non-ASCII characters in data files
- fixes for Spanish help files
- more fixes for build process
- GNU Octave data export: write all data as single matrix
- fix printing of "periods" in periodogram output (thanks to
  Tadeusz Kufel)
- fix generation of periodic dummy variables for daily data
  (again thanks to Tadeusz Kufel)
- with gtk >= 2.4.0 on Linux, use the new gtk file chooser